--- a/patrusheva/lesson3/app/src/main/res/layout/activity_main.xml
+++ b/patrusheva/lesson3/app/src/main/res/layout/activity_main.xml
@@ -10,17 +10,20 @@
         style="@style/Widget.MaterialComponents.AppBarLayout.Primary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <com.google.android.material.appbar.MaterialToolbar
             style="@style/Widget.MaterialComponents.Toolbar.Primary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:title="@string/app_name"
             app:titleCentered="true"/>
+
         <com.google.android.material.tabs.TabLayout
             style="@style/Widget.MaterialComponents.TabLayout.Colored"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:tabGravity="center">
+
             <com.google.android.material.tabs.TabItem
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -30,27 +33,43 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/tab2_name"/>
+
         </com.google.android.material.tabs.TabLayout>
+
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginBottom="120dp">
+
+            <include layout="@layout/item_card"/>
+
+            <include layout="@layout/item_card"/>
+
+            <include layout="@layout/item_card"/>
+
+            <include layout="@layout/item_card"/>
+
         </LinearLayout>
+
     </androidx.core.widget.NestedScrollView>
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="16dp"
         app:icon="@drawable/ic_share"
         android:text="@string/fab_text"
         app:layout_anchor="@id/bottomNavigation"
-        app:layout_anchorGravity="end|bottom"
-        android:layout_marginBottom="72dp"
-        android:layout_marginEnd="16dp"/>
+        app:layout_anchorGravity="top|end"
+        app:layout_dodgeInsetEdges="bottom" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigation"
@@ -58,6 +77,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
+        app:layout_insetEdge="bottom"
         app:menu="@menu/bottom_menu"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
