--- a/mozer/hw6/app/src/main/res/layout/item_note.xml
+++ b/mozer/hw6/app/src/main/res/layout/item_note.xml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/Widget.Material3.CardView.Elevated"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    style="@style/Widget.Material3.CardView.Filled"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
-    android:elevation="8dp">
+    xmlns:tools="http://schemas.android.com/tools"
+    app:cardCornerRadius="12dp">
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/cardText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
+        android:textSize="16sp"
+        tools:text="Note text that resizes the card vertically to fit itself Note text that resizes the card vertically to fit itself Note text that resizes the card vertically to fit itself"
         android:textColor="@color/black" />
 
 
