--- a/app/src/main/res/drawable/grey_background.xml
+++ b/app/src/main/res/drawable/grey_background.xml
@@ -4,4 +4,8 @@
     <gradient
         android:startColor="@color/light_grey"
         android:endColor="@color/light_grey"/>
+
+    <size
+        android:height="@dimen/grey_rectangle_height"
+        android:width="@dimen/grey_rectangle_width"/>
 </shape>
