--- a/app/src/main/res/drawable/red_background.xml
+++ b/app/src/main/res/drawable/red_background.xml
@@ -6,6 +6,10 @@
         android:startColor="#dc143c"
         android:endColor="#dc143c"/>
 
+    <size
+        android:height="@dimen/red_rectangle_height"
+        android:width="@dimen/red_rectangle_width" />
+
     <corners
         android:radius="15dp" />
 
