--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
             android:id="@+id/cover"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/cover"
+            android:src="@drawable/cover"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -31,25 +31,27 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/cover" />
 
-        <Button
+
+        <ImageButton
             android:id="@+id/share"
-            style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:src="@drawable/ic_baseline_share_24"
             android:backgroundTint="@color/white"
-            android:drawableEnd="@drawable/ic_baseline_share_24"
+            android:layout_marginEnd="@dimen/default_margin_end"
             app:layout_constraintBottom_toBottomOf="@+id/title"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/title" />
+            app:layout_constraintTop_toTopOf="@+id/title"/>
 
         <TextView
             android:id="@+id/author"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_top_author"
+            android:layout_marginEnd="@dimen/default_margin_end"
             android:text="@string/author"
             android:textSize="@dimen/author_text"
-            app:layout_constraintEnd_toEndOf="@+id/title"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/title"
             app:layout_constraintTop_toBottomOf="@+id/title" />
 
@@ -88,16 +90,6 @@
             app:layout_constraintTop_toTopOf="@+id/old_price" />
 
 
-        <View
-            android:id="@+id/red_rectangle"
-            android:layout_width="@dimen/red_rectangle_width"
-            android:layout_height="@dimen/red_rectangle_height"
-            android:layout_marginStart="@dimen/margin_start_red_rectangle"
-            android:background="@drawable/red_background"
-            app:layout_constraintStart_toEndOf="@+id/old_price"
-            app:layout_constraintTop_toTopOf="@+id/price"
-            app:layout_constraintBottom_toBottomOf="@+id/price"/>
-
         <TextView
             android:id="@+id/sale"
             android:layout_width="wrap_content"
@@ -105,10 +97,13 @@
             android:text="@string/sale"
             android:textColor="@color/white"
             android:textSize="@dimen/sale_text"
-            app:layout_constraintBottom_toBottomOf="@+id/red_rectangle"
-            app:layout_constraintEnd_toEndOf="@+id/red_rectangle"
-            app:layout_constraintStart_toStartOf="@+id/red_rectangle"
-            app:layout_constraintTop_toTopOf="@+id/red_rectangle" />
+            android:background="@drawable/red_background"
+            android:paddingStart="15dp"
+            android:paddingTop="2dp"
+            android:layout_marginStart="16dp"
+            app:layout_constraintStart_toEndOf="@+id/old_price"
+            app:layout_constraintTop_toTopOf="@+id/price"
+            app:layout_constraintBottom_toBottomOf="@+id/price" />
 
 
         <include
@@ -135,61 +130,15 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/button_pdf" />
 
-        <View
-            android:id="@+id/grey_rectangle"
-            android:layout_width="@dimen/grey_rectangle_width"
+        <include
+            android:id="@+id/promotion_details"
+            layout="@layout/promotion"
             android:layout_height="@dimen/grey_rectangle_height"
-            android:layout_marginStart="@dimen/default_margin_start"
+            android:layout_width="@dimen/grey_rectangle_width"
             android:layout_marginTop="@dimen/margin_top_grey_rectangle"
-            android:background="@drawable/grey_background"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/promotion" />
+            app:layout_constraintStart_toStartOf="@+id/promotion"
+            app:layout_constraintTop_toBottomOf="@+id/promotion"/>
 
-        <View
-            android:id="@+id/circle"
-            android:layout_width="@dimen/circle_diameter"
-            android:layout_height="@dimen/circle_diameter"
-            android:layout_marginStart="@dimen/margin_start_circle"
-            android:layout_marginTop="@dimen/margin_top_circle"
-            android:background="@drawable/circle"
-            app:layout_constraintStart_toStartOf="@+id/grey_rectangle"
-            app:layout_constraintTop_toTopOf="@+id/grey_rectangle" />
-
-        <TextView
-            android:id="@+id/sale2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/sale2"
-            android:textColor="@color/white"
-            app:layout_constraintBottom_toBottomOf="@+id/circle"
-            app:layout_constraintEnd_toEndOf="@+id/circle"
-            app:layout_constraintStart_toStartOf="@+id/circle"
-            app:layout_constraintTop_toTopOf="@+id/circle" />
-
-        <TextView
-            android:id="@+id/theBestPay"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_start_theBestPay"
-            android:layout_marginEnd="@dimen/margin_end_theBestPay"
-            android:text="@string/best_pay_text"
-            android:textSize="@dimen/the_best_pay"
-            android:textColor="@color/black"
-            app:layout_constraintEnd_toEndOf="@+id/grey_rectangle"
-            app:layout_constraintBottom_toBottomOf="@+id/circle"
-            app:layout_constraintStart_toEndOf="@+id/sale2"
-            app:layout_constraintTop_toTopOf="@+id/circle" />
-
-        <TextView
-            android:id="@+id/timer"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_top_timer"
-            android:text="@string/timer"
-            android:textColor="@color/red"
-            app:layout_constraintEnd_toEndOf="@+id/grey_rectangle"
-            app:layout_constraintStart_toStartOf="@id/circle"
-            app:layout_constraintTop_toBottomOf="@+id/circle" />
 
         <TextView
             android:id="@+id/description"
@@ -202,7 +151,7 @@
            style="@style/SubtitleText"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/timer" />
+            app:layout_constraintTop_toBottomOf="@+id/promotion_details" />
 
         <TextView
             android:id="@+id/text"
