--- a/tsvetkova/NanoPost/app/src/main/res/layout/fragment_auth.xml
+++ b/tsvetkova/NanoPost/app/src/main/res/layout/fragment_auth.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
         android:text="@string/app_name"
-        android:textSize="28sp"
+        android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
         app:layout_constraintBottom_toTopOf="@+id/username"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
