--- a/tsvetkova/NanoPost/app/src/main/res/layout/fragment_post.xml
+++ b/tsvetkova/NanoPost/app/src/main/res/layout/fragment_post.xml
@@ -48,7 +48,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
                 tools:text="@string/header"
-                android:textSize="@dimen/post_header_size"
+                android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/avatar"
